# valust-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yaml
crates/valust-axum/: Cargo.toml  README.md
crates/valust-axum/src/: extractor.rs  lib.rs
crates/valust-axum/src/extractor/: cbor.rs  form.rs  json.rs  mod.rs  msgpack.rs  rejection.rs  ron.rs  sonic.rs  toml.rs  xml.rs  yaml.rs
crates/valust-regex-utils/: Cargo.toml  README.md
crates/valust-regex-utils/src/: lib.rs  time.rs
crates/valust-utils/: Cargo.toml  README.md
crates/valust-utils/src/: casing.rs  convert.rs  dangerous.rs  lib.rs  net.rs  numeric.rs  stream.rs
src/valust/: Cargo.toml  README.md
src/valust-derive/: Cargo.toml  README.md  trans-utils.md  valid-utils.md
src/valust-derive/src/: lib.rs
src/valust-derive/src/cmd/: mod.rs
src/valust-derive/src/cmd/trans/: expr.rs  func.rs  mod.rs
src/valust-derive/src/cmd/valid/: color.rs  expr.rs  func.rs  mod.rs  regex.rs  regex_alias.rs
src/valust-derive/src/config/: field_config.rs  mod.rs  struct_config.rs
src/valust-derive/src/origin_utils/: iter.rs  option.rs  parse_error.rs  parser.rs
src/valust-derive/src/parse/: mod.rs  parse_field.rs  parse_field_transformer.rs  parse_field_validator.rs  parse_struct.rs
src/valust-derive/src/syntax/: field.rs  mod.rs  struct_attr.rs  structure.rs
src/valust-derive/src/syntax/field_attr/: forward.rs  forward_attr.rs  mod.rs  trans.rs  valid.rs
src/valust-derive/src/syntax/struct_attr/: forward_attr.rs  forward_derive.rs  mod.rs  post.rs  pre.rs  rename.rs
src/valust-derive/src/utils/: create_error.rs  err_text.rs  error.rs  mod.rs  parser.rs  regex_comp.rs  require_bool.rs  require_lit_str.rs  require_single.rs
src/valust/src/: error.rs  lib.rs  transformer.rs  validator.rs
src/valust/src/error/: display.rs  mod.rs  transform.rs  validate.rs
tests/: Cargo.toml
tests/tests/: forward_attr.rs  gen_doc.rs  macros.rs  real_world.rs  regex.rs  rework.rs
