[workspace]
members = ["src/valust", "src/valust-derive", "tests", "crates/valust-utils", "crates/valust-axum"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"

authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Embers-of-the-Fire/valust-rs"
categories = ["config", "data-structures", "development-tools::debugging", "rust-patterns"]

[workspace.dependencies]
# 3rd-party dependencies
syn = { version = "2.0.96" }
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.93" }
either = { version = "1.13.0" }
sealed = { version = "0.6.0" }
convert_case = { version = "0.7.1" }
axum = { version = "0.8.1" }
serde = { version = "1.0.217" }
sonic-rs = { version = "0.3.17" }
mime = { version = "0.3.17" }

# Internal dependencies
valust = { path = "src/valust", version = "0.3.1"}
valust-derive = { path = "src/valust-derive", version = "0.3.1"}
valust-utils = { path = "crates/valust-utils", version = "0.3.1"}

[workspace.lints.rust]
missing_docs = "warn"
