[workspace]
members = [
    "src/valust",
    "src/valust-derive",
    "tests",
    "crates/valust-utils",
    "crates/valust-axum",
    "crates/valust-regex-utils",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.78.0"

authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Embers-of-the-Fire/valust-rs"
categories = [
    "config",
    "data-structures",
    "development-tools::debugging",
    "rust-patterns",
]

[workspace.dependencies]
# 3rd-party dependencies
syn = { version = "2.0.96" }
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.93" }
either = { version = "1.13.0" }
sealed = { version = "0.6.0" }
convert_case = { version = "0.7.1" }
axum = { version = "0.8.1" }
serde = { version = "1.0.217" }
sonic-rs = { version = "0.3.17" }
serde_yaml = { version = "0.9.34" }
toml = { version = "0.8.19" }
quick-xml = { version = "0.37.2" }
rmp-serde = { version = "1.3.0" }
ciborium = { version = "0.2.2" }
ron = { version = "0.8" }
mime = { version = "0.3.17" }
regex = { version = "1.11.1" }
paste = { version = "1.0.15" }

# Internal dependencies
valust = { path = "src/valust", version = "0.7.0" }
valust-derive = { path = "src/valust-derive", version = "0.7.0" }
valust-utils = { path = "crates/valust-utils", version = "0.7.0" }
valust-regex-utils = { path = "crates/valust-regex-utils", version = "0.7.0" }
valust-axum = { path = "crates/valust-axum", version = "0.7.0" }

[workspace.lints.rust]
missing_docs = "warn"
