[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
convert_case = { workspace = true }
syn = { workspace = true }

valust = { workspace = true, features = ["regex"] }
valust-derive = { workspace = true, features = ["regex"] }
valust-utils = { workspace = true }
