[package]
name = "valust-axum"
keywords = ["validator", "data", "utils", "axum", "web"]
description = "Valust utilities for Axum"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true, features = ["serialize"] }
rmp-serde = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
mime = { workspace = true }

valust = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }

valust-derive = { workspace = true }

[features]
default = ["json", "form", "sonic", "yaml", "toml", "xml", "msgpack", "cbor", "ron"]
json = ["axum/json"]
form = ["axum/form"]
sonic = ["sonic-rs"]
yaml = ["serde_yaml"]
xml = ["quick-xml"]
msgpack = ["rmp-serde"]
cbor = ["ciborium"]

[lints]
workspace = true
