[package]
name = "valust-utils"
keywords = ["validator", "data", "utils"]
description = "Utilities for the Valust crate"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
