[package]
name = "valust-utils"
keywords = ["validator", "data", "utils"]
description = "Utilities for the Valust crate"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
convert_case = { workspace = true, optional = true }

valust = { workspace = true, default-features = false }

[dev-dependencies]
valust-derive = { workspace = true }

[features]
default = ["casing"]
casing = ["convert_case"]

[lints]
workspace = true
