[package]
name = "valust-utils"
keywords = ["validator", "data", "utils"]
description = "Utilities for the Valust crate"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
convert_case = { workspace = true, optional = true }
sealed = { workspace = true }

[dev-dependencies]
valust-derive = { path = "../../src/valust-derive", features = [
    "regex",
    "regex-utils",
    "email",
    "url",
    "username",
    "color",
] }
valust = { path = "../../src/valust", features = ["regex"] }

[features]
default = ["casing"]
casing = ["convert_case"]

[lints]
workspace = true
