[package]
name = "valust-derive"
keywords = ["validator", "data", "macro", "derive"]
description = "A derive macro for the Valust crate"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
either = { workspace = true }

[dev-dependencies]
valust = { path = "../valust" }
valust-utils = { path = "../../crates/valust-utils" }

[features]
default = []
regex = []

[lints]
workspace = true
