[package]
name = "valust-derive"
keywords = ["validator", "data", "macro", "derive"]
description = "A derive macro for the Valust crate"
include = ["src/**/*", "README.md", ".gitignore", "valid-utils.md", "trans-utils.md"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
paste = { workspace = true }

valust-regex-utils = { workspace = true, optional = true }

[dev-dependencies]
valust = { path = "../valust" }
valust-utils = { path = "../../crates/valust-utils" }

[features]
default = []
regex = []
regex-utils = ["regex", "dep:valust-regex-utils"]
email = []
url = []
username = []

[lints]
workspace = true
