[package]
name = "valust"
keywords = ["validator", "data"]
description = "A data validation library for Rust"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
sealed = { workspace = true }
valust-derive = { workspace = true, optional = true }

[dev-dependencies]
valust-derive = { path = "../valust-derive" }
valust-utils = { path = "../../crates/valust-utils" }

[features]
default = []
derive = ["valust-derive"]

[lints]
workspace = true
